--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -514,3 +514,71 @@
 
 
 По информации ведомства, из незаконного оборота изъяли 274 единицы огнестрельного оружия отечественного и иностранного производства. Среди изъятого огнестрельного оружия было как современное, так и времен Великой Отечественной войны (немецкие и советские пулеметы и винтовки).
+
+
+Раздел .Суд на два месяца заключил под стражу сына замглавы МВД Зубова по делу о даче взятки|13.02 20:00
+
+
+
+13.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+Денису Зубову избрана мера пресечения в виде заключения под стражу на два месяца", - сказал собеседник агентства. Адвокат Зубова Михаил Семагин после заседания суда в разговоре с журналистами подтвердил информацию об аресте. "Это идеальная провокация", - добавил он в ответ на вопрос журналистов о своем отношении к уголовному делу.
+
+
+Кроме того, самарский районный суд заключил под стражу президента мини-футбольного клуба "Динамо-Самара" Игорь Карпова, который вместе с сыном замглавы МВД России Игоря Зубова подозревается по делу о даче взятки, сообщил журналистам его адвокат Евгений Супотницкий. "Доказательства причастности моего доверителя в судебном заседании предъявлено не было. Несмотря на это, была избрана мера пресечения в виде заключения под стражу. Следователь не смог ответить на вопрос, чем подтверждается причастность Карпова в указанном преступлении. На мой взгляд, в дальнейшем уголовное преследование в отношении моего доверителя будет прекращено в связи с непричастностью к данному преступлению", - сказал журналистам Евгений Супотницкий.
+
+
+Позднее стало известно, что суд заключил под стражу и бывшего директора перевалочной нефтебазы ООО "МО НТП" Василия Ермакова, который также подозревается по делу о даче взятки. Об этом сообщил журналистам в воскресенье его адвокат Эмиль Исмаилов. "Клиент вину не признает. Арестован", - сказал журналистам Эмиль Исмаилов.
+
+
+Раздел .В Ивановской области завели дело о халатности после гибели четырех детей и их матери|13.02 20:00
+
+
+
+
+13.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+Дело о халатности возбудили в Ивановской области после гибели в городе Юрьевец при пожаре четверых детей и их матери, сообщила прокуратура региона.
+Ранее в воскресенье СУСК информировало о гибели четверых детей в возрасте одного года, четырех, пяти и 10 лет при пожаре в частном доме в городе Юрьевец. Следствие указывало, что заведено уголовное дело о причинении смерти по неосторожности двум и более лицам (часть 3 статьи 109 УК РФ, максимальная санкция – лишение свободы на четыре года). По предварительным данным, в доме жила мать с четырьмя детьми, семья характеризуется как неблагополучная. Позднее в ГУ МЧС сообщили, что под завалами дома нашли тело матери погибших детей.
+
+
+В прокуратуре пояснили, что семья состояла на профилактическом учете. Однако "несмотря на наличие данных о неблагополучии семьи, обращения родственников", должностные лица органов опеки и попечительства, органов полиции не приняли нужные меры для защиты прав малолетних.
+
+
+Раздел .В Петербурге задержали мужчину, подозреваемого в разбое и насилии над женщиной-врачом|13.02 20:00
+
+
+
+13.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+
+Подозреваемый в сексуальном насилии над женщиной, работающей врачом, и в разбое задержан в Выборгском районе Петербурга, сообщает пресс-служба ГУМВД по Петербургу и Ленинградской области.
+
+
+"В Выборгском районе Петербурга задержали мужчину, подозреваемого в разбойном нападении и совершении насильственных действий сексуального характера", - сказано в сообщении.
+
+
+По данным пресс-службы, 10 февраля занимающийся частным извозом мужчина потребовал у нее 50 тысяч рублей, когда женщина села к нему в автомобиль. "Потерпевшая вышла у торгово-развлекательного комплекса по проспекту Просвещения под предлогом снятия денежных средств, и обратилась в территориальный отдел полиции", - сказано в сообщении.
+
+
+На следующий день 33-летний подозреваемый был задержан. "В результате опроса потерпевшей стало известно, что злоумышленник совершил в отношении нее еще и насильственные действия сексуального характера", - сказано в сообщении. Возбуждены уголовные дела о насильственных действиях сексуального характера и разбое.
+
+
