--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -582,3 +582,90 @@
 На следующий день 33-летний подозреваемый был задержан. "В результате опроса потерпевшей стало известно, что злоумышленник совершил в отношении нее еще и насильственные действия сексуального характера", - сказано в сообщении. Возбуждены уголовные дела о насильственных действиях сексуального характера и разбое.
 
 
+
+Раздел .СК требует ареста основателя неонацистской группировки "МКУ"|14.02 20:00
+
+
+
+
+14.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+
+Следствие направило в Басманный суд Москвы ходатайство о заочном аресте основателя неонацистской группировки "МКУ" Егора Краснова. Об этом ТАСС сообщил источник в правоохранительных органах.
+
+
+"Следователи направили в суд ходатайство о заочном аресте основателя "МКУ", гражданина Украины Краснова", - сказал собеседник агентства. По его словам, Краснов объявлен в федеральный розыск.
+
+
+В Басманном суде ТАСС подтвердили получение ходатайства следствия об избрании меры пресечения Краснову, обвиняемому в убийстве двух и более лиц, не уточнив подробностей.
+
+
+По данным СМИ, Краснов был арестован властями Украины из-за обвинений в отношении него со стороны местных правоохранительных органов. Он содержится в СИЗО Днепра. Также в некоторых изданиях приводится информация о возможной причастности Краснова к взрыву автобуса в Воронеже 12 августа 2021 года.
+
+
+В конце апреля прошлого года в Центре общественных связей (ЦОС) ФСБ России сообщили о задержании в девяти российских городах 16 сторонников украинского молодежного радикального сообщества "МКУ". По версии следствия, они планировали массовые убийства в Тамбове, Петербурге, Самаре, Саратове. Во время обысков у задержанных изъяли холодное оружие, большое количество электронных носителей информации и средств коммуникации. Они содержали инструкции по изготовлению средств террора, сведения о совершенных и планируемых террористических и экстремистских преступлениях, видеоотчеты о проведенных насильственных акциях, направленных главарю "МКУ" Егору Краснову, а также переписку с ним.
+
+
+
+Раздел .Суд приговорил лидера хакерской группировки Lurk Козловского к 14 годам колонии|14.02 20:00
+
+
+
+14.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+
+Козловского признали виновным по ряду статей Уголовного кодекса России, включая организацию преступного сообщества, мошенничество в особо крупном размере и неправомерный доступ к компьютерной информации.
+
+
+Суд также признал участников группировки виновными в инкриминируемых им преступлениях. В зависимости от роли их обвинили в мошенничестве в сфере компьютерной информации в особо крупном размере, совершенном группой лиц; организации либо участии в преступном сообществе, создании и распространении вредоносных компьютерных программ, а также неправомерном доступе к компьютерной информации. Всего по делу проходят 22 фигуранта, один из них находится в розыске.
+
+
+Как обнаружило следствие, подсудимые с декабря 2015 года по апрель 2016 года создали и распространили в интернете вирус, с помощью которого получили доступ к сетям банков и крупных компаний. После этого члены группировки похитили более 1,2 миллиарда рублей. Они также получили доступ к базе данных аэропорта Кольцово в Екатеринбурге.
+
+
+Ранее сообщалось, что судья попросила адвокатскую палату наказать юриста Федора Акчермышева, защищающего Козловского. Адвокат пришел на заседание по делу лидера группировки в маске с надписью «цирк».
+
+
+Константина Козловского и других участников хакерской группы Lurk задержали в 2016 году. По версии следствия, Константин Козловский и Владимир Грицан создали группировку в декабре 2013 года. Разработанная ими троянская программа Lurk внедрялась в корпоративные сети вместе с файлами и позволяла получать доступ к компьютерам руководства и бухгалтеров организаций.
+
+
+Раздел .Замглавы управления автомобильных дорог Тамбовской области убили в подъезде дома|14.02 20:00
+
+
+
+14.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+
+
+Заместителя начальника управления автомобильных дорог Тамбовской области Виктора Вакульчика убили в понедельник утром в подъезде своего дома. Об этом ТАСС сообщил источник в правоохранительных органах.
+
+
+"Сегодня утром в подъезде собственного дома был убит Виктор Вакульчик. Его зарезали, врачи не смогли спасти", - сообщил собеседник агентства.
+Он также добавил, что на месте работают следователи и криминалисты следственного управления СК по Тамбовской области.
+
+
+В управлении информационной политики администрации региона ТАСС подтвердили информацию о гибели Виктора Вакульчика.
+
+
+"Подтверждаем факт гибели заместителя начальника управления автомобильных дорог и транспорта Тамбовской области Вакульчика Виктора Валентиновича. По данному факту правоохранительные органы ведут соответствующую проверку", - прокомментировали в ведомстве.
+
+
+Виктор Вакульчик работал в органах власти с 2016 года. Ранее он руководил компанией "Тамбовтранс", которая занимается пассажирскими перевозками в городе. В последнее время занимал пост заместителя начальника управления автомобильных дорог Тамбовской области.
