--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -669,3 +669,72 @@
 
 
 Виктор Вакульчик работал в органах власти с 2016 года. Ранее он руководил компанией "Тамбовтранс", которая занимается пассажирскими перевозками в городе. В последнее время занимал пост заместителя начальника управления автомобильных дорог Тамбовской области.
+
+
+Раздел .В Москве двое пьяных мигрантов-дворников изнасиловали 28-летнюю женщину|15.02 20:00
+
+
+15.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+На востоке Москвы задержали двух дворников 29 и 40 лет, обвиняемых в изнасиловании 28-летней москвички на Вешняковской улице. Об этом во вторник, 15 февраля, «Ленте.ру» сообщила официальный представитель столичного управления Следственного комитета России (СКР) Юлия Иванова.
+
+
+По данным следствия, вечером 13 февраля они, находясь в состоянии алкогольного опьянения, напали на женщину рядом с одним из жилых домов и надругались над ней. Крики потерпевшей услышали очевидцы, которые сразу позвонили в полицию. Злоумышленников задержали на месте преступления. Как пишут РИА Новости, они оказались уроженцами одной из стран ближнего зарубежья.
+
+
+В отношении них возбудили дело по статье 131 («Изнасилование, совершенное группой лиц») УК РФ. В ближайшее время их отправят в СИЗО.
+
+
+Раздел .Лефортовский суд Москвы: Жителя Плесецка заподозрили в госизмене|15.02 20:00
+
+
+
+15.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+
+Сотрудники Федеральной службы безопасности задержали жителя поселка Плесецк Архангельской области, сообщает ТАСС со ссылкой на Лефортовский суд Москвы.
+
+
+Его подозревают в государственной измене (ст. 275 УК). В суд уже поступило ходатайство о выборе меры пресечения в виде ареста.
+
+
+«В суд поступило ходатайство следствия об избрании меры пресечения в виде заключения под стражу в отношении гражданина России Намазова Рамиза, который подозревается в преступлении, предусмотренном ст. 275 УК (госизмена)», — сообщили агентству в суде.
+
+
+Ст. 275 УК предусматривает срок от 12 до 20 лет за выдачу гостайны иностранному государству или международной организации. Субъектами преступления могут быть те, кто был по службе допущен к секретным сведениям, а также те, кому они стали известны «в иных случаях». В нынешней редакции этот состав действует с 2012 года. Ранее под госизменой подразумевалось содействие другим странам или организациям «в проведении враждебной деятельности в ущерб внешней безопасности» России.
+
+
+
+Раздел .Вице-спикера гордумы Воронежа подозревают в мошенничестве на 9 млн рублей|15.02 20:00
+
+
+15.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+48-летнего заместителя председателя Воронежской городской Думы Алексея Пинигина заподозрили в мошенничестве. Об этом рассказала пресс-служба регионального Следственного комитета сегодня, 15 февраля.
+
+
+По предварительным данным, в 2018 году Пинигин получил незаконное вознаграждение в размере 9 млн 200 тысяч рублей от директора фирмы, которая строила социальный объект в Грибановском районе. В обмен чиновник пообещал помочь в приёмке и оплате выполненных организацией работ. Отмечается, что депутат не имел права влиять на такие решения. Полученные деньги Пинигин потратил на собственные цели.
+
+
+О противоправной деятельности парламентария узнали сотрудники регионального УФСБ. Собранные материалы они направили в СК, который возбудил уголовное дело по статье «Мошенничество, совершенное в особо крупном размере» (ч. 4 ст. 159 УК РФ). Максимальное наказание по этой статье — 10 лет лишения свободы.
+
+
+Пинигина задержали. На допросе он признал свою вину. Вопрос о мере пресечения пока решается. Региональные УФСБ и СК продолжают расследование дела.
