--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -738,3 +738,118 @@
 
 
 Пинигина задержали. На допросе он признал свою вину. Вопрос о мере пресечения пока решается. Региональные УФСБ и СК продолжают расследование дела.
+
+
+Раздел. Экс-профессора МГИМО Валерия Соловья и его сына задержали сотрудники полиции|16.02 20:00
+
+
+
+16.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+
+Экс-профессора МГИМО Валерия Соловья и его сына задержали сотрудники полиции. Утром 16 февраля в их квартире прошел обыск, в ходе которого были изъяты все электронные носители. Об этом пишет Znak com со ссылкой на активистку Эльвиру Вихареву.
+
+
+По данным источника издания, обыски у Соловья проходили в рамках уголовного дела, возбужденного по статье 282 УК РФ («Возбуждение ненависти либо вражды, а равно унижение человеческого достоинства»).
+
+
+Соловей известен в России регулярной критикой власти и лично президента. В июне 2019 года руководство МГИМО попрощалось с профессором из-за его «антигосударственной пропаганды и подрыва политической стабильности».
+
+
+Раздел .Уроженец Таджикистана ранил двоих полицейских ножом в ходе задержания на юге Москвы|16.02 20:00
+
+
+
+16.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+
+Уроженец Таджикистана ранил двоих полицейских ножом в ходе задержания на юге Москвы. Об этом ТАСС в среду сообщил источник в правоохранительных органах.
+"Инцидент произошел вечером накануне. Один из злоумышленников, предположительно уроженец Таджикистана, во время задержания на Медынской улице напал с ножом на полицейских. Двое получили ранения", - сказал собеседник агентства.
+
+
+Начальник пресс-службы ГУ МВД России по Московской области Татьяна Петрова уточнила ТАСС, что подозреваемый в краже - 23-летний мужчина, был установлен сотрудниками УМВД России по Ленинскому городскому округу в результате оперативно-разыскных мероприятий. 
+
+
+"Один из сотрудников полиции был госпитализирован в медицинское учреждение. По данному факту следственными органами принято процессуальное решение", - сказала Петрова.
+
+
+
+Полицейские проводят комплекс мероприятий, направленный на установление всех обстоятельств произошедшего.
+По словам источника ТАСС, возбуждено уголовное дело. "Возбуждено уголовное дело по ч. 2 ст. 318 УК РФ ("Применение насилия, опасного для жизни или здоровья, в отношении представителя власти")", - сказал собеседник агентства. 
+
+
+Источник добавил, что задержанный не имеет места жительства в Москве. Инцидент произошел в доме, где живет его знакомая, к которой он пришел в гости.
+"Оба пострадавших полицейских обращались за помощью медиков, у них диагностированы резаные раны кистей рук", - добавил он.
+
+
+Раздел .ФСБ возбудила уголовное дело в отношении руководителя сети МФЦ Коми|16.02 20:00
+
+
+16.02 20:00
+
+
+ПримерРисунок-123
+
+
+Руководитель госучреждения "Многофункциональный центр предоставления государственных и муниципальных услуг Республики Коми", которое управляет сетью МФЦ в регионе, Наталья Жегунова подозревается в присвоении и растрате под видом премиальных выплат. В отношении нее возбуждено уголовное дело, сообщили ТАСС в пресс-службе управления ФСБ России по Республике Коми.
+
+"УФСБ России по Республике Коми возбуждено уголовное дело в отношении руководителя ГАУ Республики Коми "Многофункциональный центр предоставления государственных и муниципальных услуг Республики Коми" по признакам преступления, предусмотренного ч. 3 ст. 160 УК РФ ("Присвоение и растрата")", - сообщили в пресс-службе.
+
+Установлено, что в декабре 2020 года подозреваемая, используя свое служебное положение, присвоила денежные средства МФЦ в крупном размере, выделенные подчиненным работникам учреждения, под видом премиальных выплат.
+В управлении ФСБ не уточнили, задержана ли руководитель.
+
+
+Раздел .В Москве задержали 9 полицейских за получение взяток от ритуальщика|17.02 20:00
+
+
+
+17.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+В Москве правоохранители провели спецоперацию по задержанию полицейских из ОВД «Марьино» и «Кузьминки», которые зарабатывали на продаже ритуальщикам сведений об умерших жителях столицы. Об этом сообщает Baza.
+
+В преступной схеме участвовали девять сотрудников МВД, которые с 2013-го по 2018 год получили взятки на два миллиона рублей. Среди задержанных были уволившиеся и действующие сотрудники органов внутренних дел. Они стали фигурантами уголовного дела о получении взяток в особо крупном размере. Также был задержан взяткодатель, работающий в похоронном бизнесе.
+
+Ранее, осенью в Приангарье были задержаны восемь полицейских по подозрению в совершении аналогичных преступлений. По версии следствия, коммерсант, который занимался организацией похорон и предоставлением ритуальных услуг, через посредника платил деньги участковым, оперативному дежурному и его помощнику за информацию об умерших на территории Шелеховского района Иркутской области. Всего он передал полицейским не менее 280 тысяч рублей.
+
+
+Раздел .Власти ДНР и ЛНР объявили о массовой эвакуации населения в Ростовскую область|17.02 20:00
+
+
+17.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+Глава самопровозглашённой Донецкой народной республики Денис Пушилин в обращении к жителям ДНР заявил, что в связи с опасной ситуацией в Донбассе с 18 февраля организован выезд населения в Россию. Он подчеркнул, что в Ростовской области уже готовы места приёма и размещения граждан.
+
+
+«С сегодняшнего дня, 18 февраля, организован массовый централизованный выезд населения в Российскую Федерацию. В первую очередь эвакуации подлежат женщины, дети и люди пожилого возраста», — сказал Пушилин.
+
+
+Представитель ЛНР в политической подгруппе Родион Мирошник заявил РИА Новости, что, обстреливая территорию республик Донбасса из тяжелого вооружения, Киев целенаправленно нарушает меры по перемирию в Донбассе, подписанные летом 2020 года. 
+
+
+Представитель Народной милиции ДНР подчеркнул, что артиллерийское вооружение ВС Украины, запрещенное минскими соглашениями и находящееся на позициях близ населенных пунктов Донбасса, указывает на подготовку к силовому решению.
+
+
+Министр обороны Украины Алексей Резников утверждает, что Киев не планирует никаких силовых акций и военных операций. Как заявил он в четверг, Украина намерена действовать политико-дипломатическим путем.
