--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -853,3 +853,38 @@
 
 
 Министр обороны Украины Алексей Резников утверждает, что Киев не планирует никаких силовых акций и военных операций. Как заявил он в четверг, Украина намерена действовать политико-дипломатическим путем.
+
+
+Раздел .В Омске правоохранители накрыли подпольную порностудию|19.02 20:00
+
+
+19.02 20:00
+
+
+ПримерРисунок-123
+
+
+Омская Росгвардия провела обыски в трех местных вебкам-студиях. Региональное управление МВД возбудило уголовное дело о незаконном изготовлении порнографии (ч. 3 ст. 242 УК РФ).
+
+
+Следствие считает, что двое омичей (1992 и 1995 года рождения) сняли в центре города помещение, где оборудовали пространство со всем «необходимым видеооборудованием для непрерывной связи с пользователями зарубежных интернет-сервисов». После обыска Росгвардия задержала администраторов и 12 девушек-вебкамщиц в возрасте от 18 до 25 лет.
+
+
+Раздел .В Санкт-Петербурге в магазине интимных товаров зарезали продавца, возбуждено дело|19.02 20:00
+
+
+
+19.02 20:00
+
+
+ПримерРисунок-123
+
+
+В Санкт-Петербурге мужчина зарезал продавца-консультанта в секс-шопе и вынес часть товара, сообщает «Фонтанка».
+
+
+Преступление произошло 18 февраля около 22:30. Мужчина пришел в магазин интимных товаров на улице Дыбенко. По данным издания, он вынул нож, на что 33-летняя продавщица сказала: «Может быть, не стоит?» Однако преступник напал на ее, нанеся несколько ударов. После этого он забрал пару коробок с товаром и сбежал. Женщина смогла позвонить коллеге, которая уже позвонила в экстренные службы. Однако получившая раны скончалась.
+
+
+Управлением Следственного комитета по Санкт-Петербургу возбуждено уголовное дело по части 1 статьи 105 УК РФ («Убийство»), сообщается на сайте ведомства. Преступника ищут.
+
