--- a/Documents/news.txt
+++ b/Documents/news.txt
@@ -888,3 +888,66 @@
 
 Управлением Следственного комитета по Санкт-Петербургу возбуждено уголовное дело по части 1 статьи 105 УК РФ («Убийство»), сообщается на сайте ведомства. Преступника ищут.
 
+
+Раздел .Подозреваемого в жестоком убийстве продавца  задержали в Петербурге|20.02 20:00
+
+
+
+20.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+Подозреваемый в жестоком убийстве продавца магазина для взрослых на улице Дыбенко задержан в Петербурге, сообщает пресс-служба ГУМВД по Петербургу и Ленобласти.
+"Уголовный розыск задержал подозреваемого в убийстве продавца магазина для взрослых", - говорится в сообщении.
+
+
+
+Подозреваемым оказался 30-летний местный житель, проживающий в доме 4/1 по улице Джона Рида.
+
+
+"Утром 20 февраля оперативники угрозыска задержали его по месту жительства. По предварительным данным, убийство было совершено при ограблении: в квартире задержанного полицейские нашли два предмета из товарного ассортимента магазина. Мужчина признался, что специально дожидался позднего вечера, чтобы ограбить магазин, но продавец отказалась проследовать в подсобку и пригрозила нажать тревожную кнопку", - отмечается в сообщении.
+
+
+Задержанного передали в следственные органы для процессуальных действий.
+
+
+
+Как следует из видео от пресс-центра МВД России, подозреваемый рассказал, что, когда он зашел в магазин, там был мужчина. Задержанный сообщил, что он испугался и вышел, потом ходил по улице и ждал, пока закроются магазины рядом.
+
+
+
+"Когда я зашел, девушка вышла, я пригрозил ей ножом, попытался ограбить… Попросил ее зайти в подсобку, чтобы ограбить, а она сказала, что сейчас она нажмет кнопку, и я сорвался. Ударил ее ножом несколько раз", - рассказал подозреваемый на распространенном видеоролике. Также он сообщил, что забрал из магазина два массажера.
+
+
+
+Раздел .Посольство США предупредило американцев об угрозе терактов в России|20.02 23:00
+
+
+
+20.02 20:00
+
+
+
+ПримерРисунок-123
+
+
+
+Посольство США в Москве на официальном сайте диппредставительства опубликовало предупреждение для американских граждан о якобы существующих угрозах терактов в общественных местах в Москве и Санкт-Петербурге, а также в районах вдоль границы России и Украины.
+
+
+
+"По сообщениям СМИ, существует угроза нападения в торговых центрах, на станциях ж/д и метро, а также других местах скопления людей в крупных городах, включая Москву и Санкт-Петербург и районы вдоль границы России с Украиной", - говорится в тексте.
+
+
+
+При этом посольство не приводит ссылки на конкретные публикации, на основе которых сделаны выводы о возможности терактов в РФ.
+Диппредставительство рекомендовало американцам следить за публикациями в международных СМИ, избегать скопления людей, сообщать друзьям и семье о своей безопасности, не контактировать с незнакомыми людьми, "быть начеку в туристических местах и местах, где бывают приезжие с Запада".
+
+
+
+В посольстве также рекомендовали американцам подготовить план эвакуации, "не предполагающий помощи правительства США".
+
