--- a/NewsData/news.txt
+++ b/NewsData/news.txt
@@ -3,7 +3,7 @@
 16.01 17:00
 
 
-ПримерРисунок-FBI
+ПримерРисунок-FBI.jpg
 
 
 В России пресечена деятельность хакерской группировки REvil, члены которой похищали деньги с помощью вредоносных программ, сообщается на сайте ФСБ РФ.
@@ -23,7 +23,7 @@
 16.01 17:00
 
 
-ПримерРисунок-QRCode
+ПримерРисунок-QRCode.jpg
 
 
 Кабмин вместе с партией «Единая Россия» отложили рассмотрение законопроекта о QR-кодах во втором чтении, сообщает Риа Новости.
