--- a/NewsData/news.txt
+++ b/NewsData/news.txt
@@ -1,9 +1,7 @@
-Раздел .ФСБ ПРЕСЕКЛА ДЕЯТЕЛЬНОСТЬ ИЗВЕСТНОЙ ХАКЕРСКОЙ ГРУППИРОВКИ|16.01 17:00
+Раздел .ФСБ ПРЕСЕКЛА ДЕЯТЕЛЬНОСТЬ ИЗВЕСТНОЙ ХАКЕРСКОЙ ГРУППИРОВКИ|16.01 17:00|FBI.jpg
 
 16.01 17:00
 
-
-ПримерРисунок-FBI.jpg
 
 
 В России пресечена деятельность хакерской группировки REvil, члены которой похищали деньги с помощью вредоносных программ, сообщается на сайте ФСБ РФ.
@@ -18,12 +16,11 @@
 ФСБ России удалось установить полный состав REvil и причастность 14-ти его членов к неправомерному обороту средств. У них были изъяты 426 миллионов рублей, 500 тысяч евро, 600 тысяч долларов, а также 20 премиум-автомобилей, приобретенных на украденные деньги.
 
 
-Раздел .ГОСДУМА СНЯЛА С ОБСУЖДЕНИЯ ЗАКОН О QR КОДАХ В ОБЩЕСТВЕННЫХ МЕСТАХ|16.01 17:00
+Раздел .ГОСДУМА СНЯЛА С ОБСУЖДЕНИЯ ЗАКОН О QR КОДАХ В ОБЩЕСТВЕННЫХ МЕСТАХ|16.01 17:00|QRCode.jpg
+
 
 16.01 17:00
 
-
-ПримерРисунок-QRCode.jpg
 
 
 Кабмин вместе с партией «Единая Россия» отложили рассмотрение законопроекта о QR-кодах во втором чтении, сообщает Риа Новости.
