--- a/NewsData/news.txt
+++ b/NewsData/news.txt
@@ -1,1 +1,5 @@
+Раздел .ФСБ ПРЕСЕКЛА ДЕЯТЕЛЬНОСТЬ ИЗВЕСТНОЙ ХАКЕРСКОЙ ГРУППИРОВКИ|08.06 22:00|telega.png
 
+08.06 22:00
+
+Свежие новости в нашем Телеграмм-канале
