--- a/NewsData/news.txt
+++ b/NewsData/news.txt
@@ -1,4 +1,4 @@
-Раздел .ФСБ ПРЕСЕКЛА ДЕЯТЕЛЬНОСТЬ ИЗВЕСТНОЙ ХАКЕРСКОЙ ГРУППИРОВКИ|08.06 22:00|telega.png
+Раздел .Свежие новости в нашем Телеграмм-канале|08.06 22:00|telega.png
 
 08.06 22:00
 
