--- a/Ads/news.txt
+++ b/Ads/news.txt
@@ -1,1 +1,11 @@
+Раздел .Свежие новости в нашем Телеграмм-канале|08.06 22:00
 
+
+
+08.06 22:00
+
+
+ПримерРисунок-123
+
+
+Свежие новости в нашем Телеграмм-канале
